[gd_scene load_steps=2 format=3 uid="uid://bgujg4dgmdpmg"]

[ext_resource type="Script" path="res://Network/network_manager.gd" id="1_yvok8"]

[node name="NetworkManager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1440.0
offset_bottom = 900.0
script = ExtResource("1_yvok8")

[node name="StartServerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 138.0
offset_bottom = 111.0
text = "Start Server"

[node name="ConnectToServerButton" type="Button" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 80.0
offset_right = 328.0
offset_bottom = 111.0
text = "Connect To Server"

[node name="StartGameButton" type="Button" parent="."]
layout_mode = 0
offset_left = 102.0
offset_top = 144.0
offset_right = 198.0
offset_bottom = 175.0
text = "Start Game"

[node name="TerminateNetworkingButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 373.0
offset_top = 80.0
offset_right = 556.0
offset_bottom = 111.0
text = "Terminate Networking"

[node name="UsernameForm" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 123.0
offset_top = 17.0
offset_right = 327.0
offset_bottom = 48.0

[node name="UsernameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 19.0
offset_right = 103.0
offset_bottom = 42.0
text = "username:"

[node name="ConnectedLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 182.0
offset_top = 112.0
offset_right = 270.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Connected!"

[node name="ServerStartedLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 112.0
offset_right = 111.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
text = "Server started!"
